crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT pg_partition_root(0);
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..26
    FuncCall@7..26
      Ident@7..24 "pg_partition_root"
      Ascii40@24..25 "("
      AConst@25..26
        Iconst@25..26 "0"
  Ascii41@26..27 ")"
  Ascii59@27..28 ";"

