crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@61.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM pg_partition_tree('ptif_li_parent');"
---
SelectStmt@0..50
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..48
    List@14..48
      FuncCall@14..48
        Ident@14..31 "pg_partition_tree"
        Ascii40@31..32 "("
        AConst@32..48
          Sconst@32..48 "'ptif_li_parent'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

