crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@65.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM pg_partition_ancestors('ptif_li_parent');"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..53
    List@14..53
      FuncCall@14..53
        Ident@14..36 "pg_partition_ancestors"
        Ascii40@36..37 "("
        AConst@37..53
          Sconst@37..53 "'ptif_li_parent'"
  Ascii41@53..54 ")"
  Ascii59@54..55 ";"

