crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@69.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_partition_root('ptif_li_parent');"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..24 "pg_partition_root"
      Ascii40@24..25 "("
      AConst@25..41
        Sconst@25..41 "'ptif_li_parent'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

