crates/pg_syntax/tests/snapshots/postgres_regress/partition_info@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_partition_root('ptif_li_child');"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..24 "pg_partition_root"
      Ascii40@24..25 "("
      AConst@25..40
        Sconst@25..40 "'ptif_li_child'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

